# Portfolio

./: .gitignore  README.md  vercel.json
backend/: .env  Cargo.toml  server.js
backend/src/: main.rs
backend/src/api/: mod.rs  spotify.rs  weather.rs
backend/src/models/: spotify.rs
frontend/: next.config.js  nginx.conf  package-lock.json  package.json  server.js  tailwind.config.js  tailwind.config.ts  vercel.json
frontend/public/: robots.txt  sitemap.xml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/About/: About.tsx
frontend/src/components/Footer/: Footer.tsx
frontend/src/components/Hero/: Hero.tsx
frontend/src/components/InfoBlocks/: InfoBlocks.tsx  index.ts
frontend/src/components/Projects/: LanguageStats.tsx  ProjectCard.tsx  ProjectModal.tsx  ProjectTabs.tsx  Projects.tsx
frontend/src/components/Skills/: Skills.tsx
frontend/src/components/SpotifyPlayer/: SpotifyPlayer.tsx  index.ts
frontend/src/hooks/: useInView.ts  useSectionVisibility.ts  useSpotify.ts
frontend/src/types/: project.ts  skill.ts  spotify.ts  weather.ts
